--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.5",
+    "@prisma/client": "^5.17.0",
+    "framer-motion": "^11.3.7",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1"
   }
 }
