--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.5",
     "@prisma/client": "^5.17.0",
     "framer-motion": "^11.3.7",
+    "iron-session": "^8.0.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
